# TinyConfig

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example1.cpp
include/TinyConfig/: binder.hpp  checker.hpp  config.hpp  exception.hpp  io.hpp  policy.hpp  read_write.hpp
include/tinyconf/: binder.hpp  checker.hpp  config.hpp  exception.hpp  io.hpp  policy.hpp  read_write.hpp
